# Virtual_Pet

./: .gitignore  pet_data.json  pyproject.toml
grimório/: Grimorio_Aula_01.md  Grimorio_Aula_02.md
src/virtual_pet/: cli.py  core.py  storage.py
tests/: test_core.py
